# staticpi_backend

./: .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE.md  README.md  _typos.toml  create_release.sh  run.sh
.devcontainer/: Dockerfile  devcontainer.json
.github/: release-body.md
.github/workflows/: new_release.yml
.sqlx/: query-0016ad4e0100b05c649784a700e83a100283e303b0f3db441195b76e9c5090c5.json  query-00306480ef8a29fdb8bc1da8e14285ecc9e02f46af251e1726fc7ee913d241c5.json  query-01449dbe9f39c5e03a23b043c9d20f5d4975286ca0f6694521450f6631f01bec.json  query-04a13d823bf9622c232766fd51f84bf7e6f09c0cdaffdae141534360096401e7.json  query-08bd6a3d3f1bee23947c0cefb5fd8b5b31c2b3fc589ad3d2eaf217722965d38c.json  query-0970bc6a36a7ee330b846aaf851914d4795465e1c03559a3871afa2e9d02a362.json  query-09dd4848b975cd6368ea318b68271d46c4af2b872329d4395fab74486e090813.json  query-0a79987fd2843261a1f902de25814df4a2201b8487d0dd2202c5ae92cf92918c.json  query-0ebccfb6521a2a60631badcbad3b9917cb7f83c6a7016d4daa0f87128013103b.json  query-13585633711d7de9a8ff76316875149a3d807f8fbc0514f79e070339b8237d47.json  query-1fa88b2691da18f37c20ac54da67474980956ffa59c74d61a6a175c9a2198b99.json  query-25384ae43ecbae6317b8e87465a87f9adff8ba88007ac6b35ff61dccbc4afdaf.json  query-29678d202f8f0984914673e5d51d36cf1a97a99702cf35aafec43216e13fd594.json  query-2cd8c376ca2b8d7bbe7178718c69578b6d829fa6a66a4711c49189c71486fcfb.json  query-2d446f4bf054ee82683cefdea8f2d108d353965abb29d4cdcebd41e0b64b5af8.json  query-342a6feb43a7003dbc6fecc74c6f8bc40c8f303e252121237937ce7e51dc89ce.json  query-411db75dded8b4f549f08a8c7e9f91ba80550fa31529e88c14a5da367b3b6abc.json  query-425e412030461b970efa4ceed5acf567f446725d3a3d2546473bc35efccce371.json  query-4742ad523819b826eccb080cabbd189b915e3ca69d85318a97f90fe084f1802b.json  query-49ae250380c404ae6ea16650ba905331cc842aba9672dc1004a8899015b4bc19.json  query-49d5fdfe43a8285815933ee56719a984a89ccc6970a9746218cf87dd3adb3322.json  query-4a13acc0c446be19ca090aea90417ed4ebc6abcb9b13b7a5514ab6f6bdbaf8c5.json  query-4ca4470491ab8d6285e305f1a4d35a898696943f0453e6807613ec2429f2184c.json  query-4d939813f2e2a0e68f9ecc37103461c91f2cd99114d52a0f99924ef30364540d.json  query-4e1a2dbc07723e902c558d95b27c8fea3554b458f11cffa1c661ec460ed05f92.json  query-4ee45056b69775589d872beeca81ee202102f1e225e7c39102395078c6a654d2.json  query-4f3222913dc270cd4b3d772dd8900fe4fe6de55e95cf9e264436612455d76d52.json  query-5304955141502085067d9d2bcd3c729730f3c4124f6da10e35ad50accab2de96.json  query-5308b3e345f33fdaad8adb19df34cb5de0527186c465b3ed9eaa6d46e230ae42.json  query-54d8a29fda8cb23eb2ddceb5f029bf863b6a6828415d43ec0296667f8662f540.json  query-56419e75093a412bf1dc3326e89d870a92c4f42a9142fb284f1223103d563d95.json  query-586cb7c249e0c3bcda10113bd5ad6399ffda20e2be14634452dfbc99a706fb4e.json  query-58e1bd3ba16b610fa100c51d2537ce7a0ae8dbb615ed86f40b692320e268ba9b.json  query-6389fb0f8d9bb1e5a1f700619c8e3da7024da3ff4bdb87f8776ab2dc565a56a1.json  query-652d911d6581bedf7e4d527463def173f23d88d4b99504f47add944017403676.json  query-6813e3080e0ff3e4c3be5dc7264cd0cc17752b43499d152cc3a33bcc21de7b2e.json  query-6a1e2d0e9e0e94e41d3d6ab8624664d9096beae1fc05789e58e6fd15ad904010.json  query-6acbfc3f9451bf3424bd86a99f76b2de01f75ce896f3fc82e0cb3776188e1c0f.json  query-6b8915dd0cb86336b0ef39c4f8e5f6fe73478670ec44440c68d753e6c99af020.json  query-6fddbc1b1976989d3b5acef9b7e8f350688ec7ce738f630d169741c76db2d54d.json  (+38 more)
docker/: dev.docker-compose.yml  docker-compose.yml
docker/backup/: create_backup.sh
docker/dockerfile/: api.Dockerfile  api.dev.Dockerfile  backup.Dockerfile  dev.postgres.Dockerfile  postgres.Dockerfile  redis.Dockerfile
docker/healthcheck/: health_api.sh  health_postgres.sh  health_redis.sh
docker/init/: dev.init_postgres.sh  init_db.sql  init_postgres.sh  migrations.sql
src/: api_error.rs  argon.rs  connections.rs  helpers.rs  main.rs  parse_env.rs  pinger.rs
src/database/: mod.rs
src/database/postgres/: mod.rs
src/database/postgres/models/: admin.rs  all_bandwidth.rs  banned_domain.rs  connection.rs  contact_message.rs  device.rs  download_data.rs  email_address.rs  email_log.rs  hourly_bandwidth.rs  invite.rs  ip_user_agent.rs  login.rs  mod.rs  monthly_bandwidth.rs  new_types.rs  password_reset.rs  two_fa_backup.rs  user.rs  user_level.rs
src/database/redis/: mod.rs
src/database/redis/models/: access_token.rs  message_cache.rs  mod.rs  new_user.rs  rate_limit.rs  session.rs  two_fa_setup.rs
src/emailer/: mod.rs  template.rs
src/servers/: mod.rs
src/servers/api/: authentication.rs  mod.rs
src/servers/api/routers/: admin.rs  device.rs  incognito.rs  mod.rs  user.rs
src/servers/token/: mod.rs  token_router.rs
src/servers/ws/: mod.rs  ws_router.rs
src/user_io/: deserializer.rs  incoming_json.rs  mod.rs  outgoing_json.rs  ws_message.rs
